# made-modernized-6c3820b4

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-0306d4fe8a0d96513890518538ce56de2802fb06044493cc913972e1b5c79473.json
crates/domain/: Cargo.toml
crates/domain/src/: ai_profile.rs  battle_pass.rs  boss_definition.rs  card_definition.rs  card_token.rs  emission_pool.rs  lib.rs  marketplace_listing.rs  match_replay.rs  matchmaking_ticket.rs  mission_attempt.rs  order.rs  player_collection.rs  ranked_standing.rs  season.rs
crates/game-session/: Cargo.toml
crates/game-session/src/: lib.rs
crates/mocks/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: error.rs  lib.rs
crates/persistence/src/repositories/: collection.rs  content.rs  match_play.rs  matchmaking.rs  mod.rs  shop.rs  solo_ai.rs  token.rs
crates/server/: Cargo.toml  Dockerfile  Dockerfile.dockerignore
crates/server/src/: lib.rs  main.rs  metrics.rs
crates/server/src/http/: collection.rs  envelope.rs  identity.rs  shop.rs
crates/server/src/ws/: hub.rs  mod.rs  protocol.rs  rng.rs
crates/server/tests/: rest_api.rs  ws_match.rs
crates/server/tests/common/: mod.rs
docs/: persistence.md
docs/superpowers/specs/: 2026-07-16-made-game-overview-design.md
migrations/: 0001_content.sql  0002_match_play.sql  0003_matchmaking_ranked.sql  0004_collection.sql  0005_shop_payments.sql  0006_solo_ai.sql  0007_token_marketplace.sql
services/data/: cards.json  server.js
web/: .env.example  README.md  capacitor.config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/scripts/: gen-icons.mjs
web/src/: App.tsx  main.tsx  routes.tsx  styles.css  vite-env.d.ts
web/src/api/: client.test.ts  client.ts  errors.ts  http.ts  index.ts  types.ts
web/src/components/: AppLayout.tsx  Placeholder.tsx
web/src/config/: api.ts  capabilities.ts
web/src/deck/: legality.test.ts  legality.ts  useDeckbuilder.ts
web/src/match/: connection.test.ts  connection.ts  model.ts  reconciler.test.ts  rules.test.ts  rules.ts  useMatch.ts
web/src/views/: CollectionView.tsx  LeaderboardView.tsx  MarketplaceView.tsx  MatchView.tsx  NotFoundView.tsx  ShopView.tsx  StoryView.tsx  TokenView.tsx  WalletView.tsx
